--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.1.16",
     "@ai-sdk/react": "^1.1.21",
     "@hookform/resolvers": "^4.1.3",
-    "@openrouter/ai-sdk-provider": "^0.4.3",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.3",
